Fix scroll alignment

--- a/app/styles/edit.less
+++ b/app/styles/edit.less
@@ -12,7 +12,7 @@
     flex-direction: column;
 
 	position:absolute;
-	padding: 14px;
+	padding: 20px;
 	box-sizing: border-box;
 	background-color:#FFF;
 	border-radius:6px;
@@ -23,15 +23,15 @@
     transition-timing-function: ease-out;
     transform-style: preserve-3d;
     backface-visibility: hidden;
-    
+
     .accordion {
         flex-grow: 1;
-        overflow: auto;
+        overflow: hidden scroll;
     
         position: relative;
         margin: 14px 0;
-        padding-right: 6px;
-        background-color:#FFF;
+        padding-right: 2px;
+        margin-right: -8px;
         cursor:default;
 
         ul {
